--- a/revamp/heterogeneity_profile.Rmd
+++ b/revamp/heterogeneity_profile.Rmd
@@ -138,7 +138,7 @@ het_plot <- function(locus.num){
   for (i in 1:dim(input.df)[1]){
     row.df <- input.df[i,]
     toa.vec <- row.df %>% 
-      select(.,one_of("islet","muscle","adipose","liver","unclassified")) %>% as.numeric(.)
+      dplyr::select(.,one_of("islet","muscle","adipose","liver","unclassified")) %>% as.numeric(.)
     build.df <- data.frame(signal=row.df$lead.rsid,max.ppa=row.df$max.ppa,
                            toa=toa.vec,tissue=tiss.vec,stringsAsFactors = FALSE)
     plot.df <- rbind(plot.df,build.df)
@@ -151,7 +151,7 @@ het_plot <- function(locus.num){
   plot.df$signum <-  map(plot.df$signal,function(rs){
     (filter(df,lead.rsid==rs)$Locus.ID %>% strsplit(.,split="_"))[[1]][2]
   }) %>% as.integer(.)
-  sub <- select(plot.df,one_of("signal","signum"))
+  sub <- dplyr::select(plot.df,one_of("signal","signum"))
   sub <- sub[!duplicated(sub),]
   sub$signal <- factor(sub$signal,levels=rs.vec)
   
@@ -242,10 +242,10 @@ for (i in 1:length(loc.vec)){
   plot.list[[i]] <- plt
 }
 
-ggsave(file = plot.dir %&% "tiss_het_19_same.png", arrangeGrob(grobs = plot.list, ncol = 10),
-       width=21,height=5) 
-ggsave(file = plot.dir %&% "tiss_het_19_same.pdf", arrangeGrob(grobs = plot.list, ncol = 10),
-       width=21,height=5) 
+ggsave(file = plot.dir %&% "tiss_het_19_same.png", arrangeGrob(grobs = plot.list, ncol = 8),
+       width=18,height=8) 
+ggsave(file = plot.dir %&% "tiss_het_19_same.pdf", arrangeGrob(grobs = plot.list, ncol = 8),
+       width=18,height=8) 
 
 filter(df,loc %in% loc.vec) %>% dim(.) # 43 signals at these 19 loci 
 
